--- a/common/pom.xml
+++ b/common/pom.xml
@@ -9,7 +9,17 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>com.github.huangjianping</artifactId>
+    <artifactId>common</artifactId>
+    <packaging>pom</packaging>
+    <name>${project.artifactId}</name>
+    <description>公共依赖</description>
+
+    <modules>
+        <module>common-core</module>
+        <module>common-feign</module>
+        <module>common-log</module>
+        <module>common-security</module>
+    </modules>
 
 
 </project>
