--- a/service-api-impl/service-auth/pom.xml
+++ b/service-api-impl/service-auth/pom.xml
@@ -3,15 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spring-microservice-exam</artifactId>
+        <artifactId>service-api-impl</artifactId>
         <groupId>com.github.huangjianping</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>gateway-service</artifactId>
+    <artifactId>auth-service</artifactId>
     <name>${project.artifactId}</name>
-    <description>spring cloud gateway网关</description>
+    <description>认证服务</description>
 
     <dependencies>
         <!-- common-core -->
@@ -20,22 +20,75 @@
             <artifactId>common-core</artifactId>
         </dependency>
 
+        <!-- common-security -->
+        <dependency>
+            <groupId>com.github.huangjianping</groupId>
+            <artifactId>common-security</artifactId>
+        </dependency>
+
+        <!-- common-log -->
+        <dependency>
+            <groupId>com.github.huangjianping</groupId>
+            <artifactId>common-log</artifactId>
+        </dependency>
+
+        <!-- user-api -->
+        <dependency>
+            <groupId>com.github.huangjianping</groupId>
+            <artifactId>user-api</artifactId>
+        </dependency>
+
+        <!-- auth-api -->
+        <dependency>
+            <groupId>com.github.huangjianping</groupId>
+            <artifactId>auth-api</artifactId>
+        </dependency>
+
+        <!-- exam-api -->
+        <dependency>
+            <groupId>com.github.huangjianping</groupId>
+            <artifactId>exam-api</artifactId>
+        </dependency>
+
         <!-- web 服务 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <!-- 配置客户端 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-config-client</artifactId>
         </dependency>
 
-        <!-- gateway -->
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-gateway</artifactId>
+            <groupId>org.springframework.security.oauth.boot</groupId>
+            <artifactId>spring-security-oauth2-autoconfigure</artifactId>
         </dependency>
 
         <!-- 管理中心插件 -->
         <dependency>
             <groupId>de.codecentric</groupId>
             <artifactId>spring-boot-admin-starter-client</artifactId>
+        </dependency>
+
+        <!--MySQL-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
+        <!-- druid阿里巴巴数据库连接池 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+        </dependency>
+
+        <!-- mybatis -->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
 
         <!-- swagger -->
@@ -67,5 +120,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
