--- a/service-api/auth-api/pom.xml
+++ b/service-api/auth-api/pom.xml
@@ -3,19 +3,23 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spring-microservice-exam</artifactId>
+        <artifactId>service-api</artifactId>
         <groupId>com.github.huangjianping</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>service-api-impl</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>service-auth</module>
-        <module>service-exam</module>
-        <module>service-user</module>
-    </modules>
 
+    <artifactId>auth-api</artifactId>
+    <name>${project.artifactId}</name>
+    <description>授权服务api</description>
+
+    <dependencies>
+        <!-- common-core -->
+        <dependency>
+            <groupId>com.github.huangjianping</groupId>
+            <artifactId>common-core</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
