--- a/service-api/pom.xml
+++ b/service-api/pom.xml
@@ -9,7 +9,16 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>com.github.huangjianping</artifactId>
+    <artifactId>service-api</artifactId>
+    <packaging>pom</packaging>
+    <name>${project.artifactId}</name>
+    <description>service-api</description>
+
+    <modules>
+        <module>auth-api</module>
+        <module>exam-api</module>
+        <module>user-api</module>
+    </modules>
 
 
 </project>
